Refactoring of order of auto config combinations.  Most common formats come first.

Do not exceed AUDIO_MAX_CHANNELS.

Addresses PR kern/52435.